--- a/index.html
+++ b/index.html
@@ -329,13 +329,15 @@
         }
 
         footer{
+            background-color: #3B72EE;
+
             width: 100%;
             height: 120px;
             text-align: center;
         }
 
         footer > h3{
-            color: #333;
+            color: #fff;
             font-size: 26px;
             font-weight: 400;
             padding-top: 20px;
@@ -419,7 +421,7 @@
             position: absolute;
             z-index: 2;
             top: 1100px;
-            right: 590px;
+            right: 550px;
         }
 
         .floatingTag4{
@@ -555,6 +557,166 @@
             right: 760px;
         }
 
+        .floatingTag11{
+            border: none;
+            padding: 8px 16px;
+            height: 34px;
+            border-radius: 17px;
+
+            background-color: transparent ;
+            color: #6A5DB4;
+            font-size: 18px;
+
+            position: absolute;
+            z-index: 2;
+            top: 900px;
+            right: 978px;
+        }
+
+        .floatingTag12{
+            border: none;
+            padding: 8px 16px;
+            height: 34px;
+            border-radius: 17px;
+
+            background-color: transparent ;
+            color: #1246FF;
+            font-size: 16px;
+
+            position: absolute;
+            z-index: 3;
+            top: 1024px;
+            right: 445px;
+        }
+
+        .deco2{
+            width: 45px;
+            height: 24px;
+            border-radius: 16px;
+            background-color: #F1B1FA;
+
+            position: absolute;
+            z-index: 2;
+            top: 750px;
+            right: 620px;
+        }
+
+        .deco2-2{
+            width: 45px;
+            height: 24px;
+            border-radius: 16px;
+            background-color: #D3D3D3;
+
+            position: absolute;
+            z-index: 1;
+            top: 744px;
+            right: 615px;
+        }
+
+        .deco3{
+            width: 19px;
+            height: 11px;
+            border-radius: 13px;
+            background-color: #C7BEFC;
+
+            position: absolute;
+            z-index: 1;
+            top: 860px;
+            right: 580px;
+        }
+
+        .deco4{
+            border: solid 3px #3B72EE;
+            width: 28px;
+            height: 28px;
+            border-radius: 18px;
+            background-color: transparent;
+
+            position: absolute;
+            z-index: 3;
+            top: 908px;
+            right: 620px;
+        }
+
+        .deco5{
+            border: none;
+            width: 32px;
+            height: 18px;
+            border-radius: 16px;
+            background-color: #FDF06E;
+
+            position: absolute;
+            z-index: 3;
+            top: 970px;
+            right: 1038px;
+        }
+
+        .deco6{
+            border: dotted 2px #6A5DB4;
+            width: 72px;
+            height: 36px;
+            border-radius: 20px;
+            background-color: transparent;
+
+            position: absolute;
+            z-index: 2;
+            top: 1040px;
+            right: 445px;
+        }
+
+        .deco7{
+            border: dotted 2px #6A5DB4;
+            width: 72px;
+            height: 36px;
+            border-radius: 20px;
+            background-color: transparent;
+
+            position: absolute;
+            z-index: 2;
+            top: 1180px;
+            right: 1055px;
+        }
+
+        .deco8{
+            border: none;
+            width: 38px;
+            height: 38px;
+            border-radius: 18px;
+            background-color: #F0F0F0;
+
+            position: absolute;
+            z-index: 2;
+            top: 1183px;
+            right: 542px;
+        }
+
+        .deco9{
+            border: none;
+            width: 18px;
+            height: 18px;
+            border-radius: 12px;
+            background-color: #D6D0F9;
+
+            position: absolute;
+            z-index: 2;
+            top: 1188px;
+            right: 664px;
+        }
+
+        .deco10{
+            border: none;
+            width: 8px;
+            height: 8px;
+            border-radius: 6px;
+            background-color: #E5E0FF;
+
+            position: absolute;
+            z-index: 3;
+            top: 1197px;
+            right: 676px;
+        }
+
+        
     </style>
 </head>
 <body>
@@ -616,6 +778,18 @@
             <button class="floatingTag8"># VR</button>
             <button class="floatingTag9"># 졸업</button>
             <button class="floatingTag10"># 메타포</button>
+            <div class="deco2"></div>
+            <div class="deco2-2"></div>
+            <div class="deco3"></div>
+            <div class="deco4"></div>
+            <button class="floatingTag11"># AI</button>
+            <div class="deco5"></div>
+            <div class="deco6"></div>
+            <button class="floatingTag12"># 2021</button>
+            <div class="deco7"></div>
+            <div class="deco8"></div>
+            <div class="deco9"></div>
+            <div class="deco10"></div>
             <div class="circle2">
                 <div class="circle3">
                     <h1>2021</h1>
