--- a/index.html
+++ b/index.html
@@ -716,6 +716,206 @@
             right: 676px;
         }
 
+        /* 반응형 */
+        @media (min-width: 1920px) {
+            .floatingTag{
+            position: absolute;
+            z-index: 2;
+            top: 1108px;
+            right: 940px;
+        }
+
+        .floatingTag2{
+            position: absolute;
+            z-index: 2;
+            top: 930px;
+            right: 690px;
+        }
+
+        .floatingTag3{
+            position: absolute;
+            z-index: 2;
+            top: 1100px;
+            right: 620px;
+        }
+
+        .floatingTag4{
+            position: absolute;
+            z-index: 2;
+            top: 1225px;
+            right: 630px;
+        }
+
+        .floatingTag5{
+            position: absolute;
+            z-index: 2;
+            top: 1290px;
+            right: 950px;
+        }
+
+        .floatingTag6{
+            position: absolute;
+            z-index: 2;
+            top: 1000px;
+            right: 1174px;
+        }
+
+        .floatingTag7{
+           position: absolute;
+            z-index: 2;
+            top: 840px;
+            right: 1142px;
+        }
+
+        .deco{
+            position: absolute;
+            z-index: 2;
+            top: 854px;
+            right: 1126px;
+        }
+
+        .floatingTag8{
+            position: absolute;
+            z-index: 2;
+            top: 750px;
+            right: 970px;
+        }
+
+        .floatingTag9{
+           position: absolute;
+            z-index: 2;
+            top: 800px;
+            right: 590px;
+        }
+
+        .floatingTag10{
+            position: absolute;
+            z-index: 2;
+            top: 810px;
+            right: 830px;
+        }
+
+        .floatingTag11{
+            position: absolute;
+            z-index: 2;
+            top: 900px;
+            right: 1048px;
+        }
+
+        .floatingTag12{
+           position: absolute;
+            z-index: 3;
+            top: 1024px;
+            right: 515px;
+        }
+
+        .deco2{
+            position: absolute;
+            z-index: 2;
+            top: 750px;
+            right: 690px;
+        }
+
+        .deco2-2{
+            position: absolute;
+            z-index: 1;
+            top: 744px;
+            right: 685px;
+        }
+
+        .deco3{
+            position: absolute;
+            z-index: 1;
+            top: 860px;
+            right: 650px;
+        }
+
+        .deco4{
+            position: absolute;
+            z-index: 3;
+            top: 908px;
+            right: 690px;
+        }
+
+        .deco5{
+            /* border: none;
+            width: 32px;
+            height: 18px;
+            border-radius: 16px;
+            background-color: #FDF06E; */
+
+            position: absolute;
+            z-index: 3;
+            top: 970px;
+            right: 1108px;
+        }
+
+        .deco6{
+            /* border: dotted 2px #6A5DB4;
+            width: 72px;
+            height: 36px;
+            border-radius: 20px;
+            background-color: transparent; */
+
+            position: absolute;
+            z-index: 2;
+            top: 1040px;
+            right: 515px;
+        }
+
+        .deco7{
+            /* border: dotted 2px #6A5DB4;
+            width: 72px;
+            height: 36px;
+            border-radius: 20px;
+            background-color: transparent; */
+
+            position: absolute;
+            z-index: 2;
+            top: 1180px;
+            right: 1125px;
+        }
+
+        .deco8{
+            /* border: none;
+            width: 38px;
+            height: 38px;
+            border-radius: 18px;
+            background-color: #F0F0F0; */
+
+            position: absolute;
+            z-index: 2;
+            top: 1183px;
+            right: 612px;
+        }
+
+        .deco9{
+            /* border: none;
+            width: 18px;
+            height: 18px;
+            border-radius: 12px;
+            background-color: #D6D0F9; */
+
+            position: absolute;
+            z-index: 2;
+            top: 1188px;
+            right: 734px;
+        }
+
+        .deco10{
+            /* border: none;
+            width: 8px;
+            height: 8px;
+            border-radius: 6px;
+            background-color: #E5E0FF; */
+
+            position: absolute;
+            z-index: 3;
+            top: 1197px;
+            right: 746px;
+        }
+        }
+
         
     </style>
 </head>
