adding popup box

--- a/works_2.html
+++ b/works_2.html
@@ -83,12 +83,32 @@
         </div>
 
         <div class='detail_work'>
-            <div id= 'deta' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
-            <div id= 'deta' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
-            <div id= 'deta' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
+            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
+                <div id="stuImg"></div>
+                <ul>
+                    <li># Blender</li>
+                    <li># UX/UI</li>
+                </ul>
+            </div>
+            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
+                <div id="stuImg"></div>
+                <ul>
+                    <li># Blender</li>
+                    <li># UX/UI</li>
+                </ul></div>
+            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
+                <div id="stuImg"></div>
+                <ul>
+                    <li># Blender</li>
+                    <li># UX/UI</li>
+                </ul></div>
         </div>
 
     </main>
+
+    <div class="pop">
+
+    </div>
 
 
     <footer>
