adding Tag Page

--- a/works_2.html
+++ b/works_2.html
@@ -78,7 +78,7 @@
         <p id="pro"> 지도교수<span>이천재</span></p>
 
         <div class='stu2_contact' id="commentTitle2">
-            <h3>COMMENT</h3>
+            <h3>PARTICIPATION</h3>
             <div id='stu2_wline'></div>
         </div>
 
