connect tag page

--- a/index.html
+++ b/index.html
@@ -907,22 +907,22 @@
     <div class="tagA">
         <div class="conA">
             <div class="rowA">
-                <button class="tagStlye t-six colorA"># 4차산업혁명</button>
-                <button class="tagStlye t-four colorB"># 활동적인</button>
-                <button class="tagStlye t-nine colorA"># 한국산업기술대학교</button>
-                <button class="tagStlye t-five colorC"># 공학관 A</button>
+                <button class="tagStlye t-six colorA" onclick = "location.href = './tag.html' "># 4차산업혁명</button>
+                <button class="tagStlye t-four colorB" onclick = "location.href = './tag.html' "># 활동적인</button>
+                <button class="tagStlye t-nine colorA" onclick = "location.href = './tag.html' "># 한국산업기술대학교</button>
+                <button class="tagStlye t-five colorC" onclick = "location.href = './tag.html' "># 공학관 A</button>
             </div>
             <div class="rowB">
-                <button class="tagStlye t-four colorA"># 인공지능</button>
-                <button class="tagStlye t-nine colorC"># UXUI 디자이너</button>
-                <button class="tagStlye t-six colorB"># PRODUCT</button>
-                <button class="tagStlye t-five colorA"># 인터페이스</button>
+                <button class="tagStlye t-four colorA" onclick = "location.href = './tag.html' "># 인공지능</button>
+                <button class="tagStlye t-nine colorC" onclick = "location.href = './tag.html' "># UXUI 디자이너</button>
+                <button class="tagStlye t-six colorB" onclick = "location.href = './tag.html' "># PRODUCT</button>
+                <button class="tagStlye t-five colorA" onclick = "location.href = './tag.html' "># 인터페이스</button>
             </div>
             <div class="rowC">
-                <button class="tagStlye t-ten colorC"># PRODUCT 디자이너</button>
-                <button class="tagStlye t-four colorA"># 메타포</button>
+                <button class="tagStlye t-ten colorC" onclick = "location.href = './tag.html' "># PRODUCT 디자이너</button>
+                <button class="tagStlye t-four colorA" onclick = "location.href = './tag.html' "># 메타포</button>
                 <button class="tagStlye2 t-eight colorA" onclick="fn_spread('hiddenContent')"># 유니버설 디자인</button>
-                <button class="tagStlye t-four colorC"># KPU</button>
+                <button class="tagStlye t-four colorC" onclick = "location.href = './tag.html' "># KPU</button>
             </div>
         </div>
     </div>
@@ -931,25 +931,25 @@
     <div id="hiddenContent" class="tagOpen" style="display: block;">
         <div class="poly2"></div>
         <div class="circle1">
-            <button class="floatingTag"># UXUI</button>
-            <button class="floatingTag2"># 인터페이스</button>
-            <button class="floatingTag3"># WEB</button>
-            <button class="floatingTag4"># 3D</button>
-            <button class="floatingTag5"># 포트폴리오</button>
-            <button class="floatingTag6"># 웹디자인</button>
-            <button class="floatingTag7"># 산업디자인</button>
+            <button class="floatingTag" onclick = "location.href = './tag.html' "># UXUI</button>
+            <button class="floatingTag2" onclick = "location.href = './tag.html' "># 인터페이스</button>
+            <button class="floatingTag3" onclick = "location.href = './tag.html' "># WEB</button>
+            <button class="floatingTag4" onclick = "location.href = './tag.html' "># 3D</button>
+            <button class="floatingTag5" onclick = "location.href = './tag.html' "># 포트폴리오</button>
+            <button class="floatingTag6" onclick = "location.href = './tag.html' "># 웹디자인</button>
+            <button class="floatingTag7" onclick = "location.href = './tag.html' "># 산업디자인</button>
             <div class="deco"></div>
-            <button class="floatingTag8"># VR</button>
-            <button class="floatingTag9"># 졸업</button>
-            <button class="floatingTag10"># 메타포</button>
+            <button class="floatingTag8" onclick = "location.href = './tag.html' "># VR</button>
+            <button class="floatingTag9" onclick = "location.href = './tag.html' "># 졸업</button>
+            <button class="floatingTag10" onclick = "location.href = './tag.html' "># 메타포</button>
             <div class="deco2"></div>
             <div class="deco2-2"></div>
             <div class="deco3"></div>
             <div class="deco4"></div>
-            <button class="floatingTag11"># AI</button>
+            <button class="floatingTag11" onclick = "location.href = './tag.html' "># AI</button>
             <div class="deco5"></div>
             <div class="deco6"></div>
-            <button class="floatingTag12"># 2021</button>
+            <button class="floatingTag12" onclick = "location.href = './tag.html' "># 2021</button>
             <div class="deco7"></div>
             <div class="deco8"></div>
             <div class="deco9"></div>
@@ -964,12 +964,12 @@
     <div class="designMajor">
         <h1>2021 MAJOR OF DESIGN ENGINEERING</h1>
         <div class="conbContainer">
-            <div class="conB">
+            <div class="conB" onclick = "location.href = './mde.html' ">
                 <h2>MEDIA DESIGN ENGINEERING</h2>
                 <p>WEB / UI /UX / IT</p>
             </div>
-            <div class="conB">
-                <h2>PRODUCT DESIGN ENGINEERING</h2>
+            <div class="conB" onclick = "location.href = './ide.html' ">
+                <h2>INDUSTRY DESIGN ENGINEERING</h2>
                 <p>PRODUCT / TI / IT</p>
             </div>
         </div>
