--- a/students_2.html
+++ b/students_2.html
@@ -42,9 +42,9 @@
         <div class='stu2_name'>
             <h1>HELLO, <br>I'M LEE SOJEONG</h1>
             <ul>
-                <li><a href='#'># Blender</a></li>
-                <li><a href='#'># UX/UI</a></li>
-                <li><a href='#'># VR</a></li>
+                <li><a href='./tag.html'># Blender</a></li>
+                <li><a href='./tag.html'># UX/UI</a></li>
+                <li><a href='./tag.html'># VR</a></li>
             </ul>
             <div id='stu2_img'></div>
         </div>
