--- a/works_2.html
+++ b/works_2.html
@@ -83,24 +83,24 @@
         </div>
 
         <div class='detail_work'>
-            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
-                <div id="stuImg"></div>
+            <div id= 'deta' style="cursor:pointer;">
+                <div id="stuImg" OnClick="location.href ='./stundents.html'"></div>
                 <ul>
-                    <li># Blender</li>
-                    <li># UX/UI</li>
+                    <li onclick = "location.href = './tag.html' "># Blender</li>
+                    <li onclick = "location.href = './tag.html' "># UX/UI</li>
                 </ul>
             </div>
-            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
-                <div id="stuImg"></div>
+            <div id= 'deta' style="cursor:pointer;">
+                <div id="stuImg" OnClick="location.href ='./stundents.html'"></div>
                 <ul>
-                    <li># Blender</li>
-                    <li># UX/UI</li>
+                    <li onclick = "location.href = './tag.html' "># Blender</li>
+                    <li onclick = "location.href = './tag.html' "># UX/UI</li>
                 </ul></div>
-            <div id= 'deta' OnClick="location.href ='./stundents.html'" style="cursor:pointer;">
-                <div id="stuImg"></div>
+            <div id= 'deta' style="cursor:pointer;">
+                <div id="stuImg" OnClick="location.href ='./stundents.html'"></div>
                 <ul>
-                    <li># Blender</li>
-                    <li># UX/UI</li>
+                    <li onclick = "location.href = './tag.html' "># Blender</li>
+                    <li onclick = "location.href = './tag.html' "># UX/UI</li>
                 </ul></div>
         </div>
 
