--- a/company.html
+++ b/company.html
@@ -44,9 +44,9 @@
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
-                    <li>#착한</li>
-                    <li>#활동적인</li>
-                    <li>#짱</li>
+                    <li onclick = "location.href = './tag.html' ">#착한</li>
+                    <li onclick = "location.href = './tag.html' ">#활동적인</li>
+                    <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
@@ -58,9 +58,9 @@
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
-                    <li>#착한</li>
-                    <li>#활동적인</li>
-                    <li>#짱</li>
+                    <li onclick = "location.href = './tag.html' ">#착한</li>
+                    <li onclick = "location.href = './tag.html' ">#활동적인</li>
+                    <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
@@ -72,9 +72,9 @@
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
-                    <li>#착한</li>
-                    <li>#활동적인</li>
-                    <li>#짱</li>
+                    <li onclick = "location.href = './tag.html' ">#착한</li>
+                    <li onclick = "location.href = './tag.html' ">#활동적인</li>
+                    <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
@@ -86,9 +86,9 @@
                 <p id='sm_p'>인재 채용 희망</p>
                 <h2><a class="companyName" href="./company2.html">NEXON</a></h2>
                 <ul>
-                    <li>#착한</li>
-                    <li>#활동적인</li>
-                    <li>#짱</li>
+                    <li onclick = "location.href = './tag.html' ">#착한</li>
+                    <li onclick = "location.href = './tag.html' ">#활동적인</li>
+                    <li onclick = "location.href = './tag.html' ">#짱</li>
                 </ul>
                 <p id = 'talk'>졸업 축하 인사 ) 산기대 졸업생 여러분! 졸업을 진심으로 축하드립니다. the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick </p>
                 <p><a href='./company2.html' id='com_go'>지원하기</a></p>
