hash tag Update

--- a/stundents.html
+++ b/stundents.html
@@ -41,7 +41,9 @@
 
 
     <div class= 'stu_tag'>
-        <input type='text' placeholder='이름 / #해쉬태그' id='stu_search' style='background:transparent; color:#fff;'>
+        <div id='top_img'></div>
+        <p>STUDENTS</p>
+        <input type='text' placeholder='이름 / #해쉬태그' id='stu_search' style='background:#3B72EE; color:#333;'>
         <i class="fas fa-search" id="stu_icon" style="cursor:pointer;"></i>
         <ul>
             <li><a href='#'># UX/UI</a></li>
@@ -49,6 +51,8 @@
             <li><a href='#'># Blender</a></li>
         </ul>
     </div>
+
+    
 
 
     <div class='stu_main'>
