--- a/works.html
+++ b/works.html
@@ -37,7 +37,9 @@
 
     <main>
 
-        <div class= 'stu_tag'>
+        <div class= 'stu_tag' id='work_tag'>
+            <div id='top_img'></div>
+            <p>WORKS</p>
             <input type='text' placeholder='이름 / #해쉬태그' id='stu_search' style='background:transparent; color:#fff;'>
             <i class="fas fa-search" id="stu_icon" style="cursor:pointer;"></i>
             <ul>
@@ -47,7 +49,7 @@
             </ul>
         </div>
 
-        <div class='work_main'>
+        <div class='work_main' id='first_work'>
             <div id='work_mom' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>
             <div id='work_mom' OnClick="location.href ='./works_2.html'" style="cursor:pointer;"></div>            
         </div>
@@ -55,9 +57,12 @@
         <div id='work_mname'>
             <p>MOMeMOM</p>
             <p id='work_hash' style="cursor:pointer;"># UX/UI</p>
+            <p id='work_hash' style="cursor:pointer;"># App Design</p>
+            <p id='right_work'>Safe Subway</p>
+            <p id='work_hash' style="cursor:pointer;"># UX/UI</p>
         </div>
 
-        <div id='work_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+        <div class='work_3d' id='fir_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
@@ -65,7 +70,7 @@
             <p id='work_hash' style="cursor:pointer;"># App Design</p>
         </div>
 
-        <div class='work_main'>
+        <div class='work_main' id='second_work'>
             <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
             <div id='work_mom' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>            
         </div>
@@ -79,7 +84,7 @@
             <p id='work_hash' style="cursor:pointer;"># app Design</p>
         </div>
 
-        <div id='work_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
+        <div class='work_3d' id='sec_3d' OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
 
         <div id='work_mname'>
             <p>3D Dot Book</p>
