--- a/about.html
+++ b/about.html
@@ -37,12 +37,19 @@
 
         <div id='ab_big'></div>
 
-        <div id='ab_kpu'></div>
+        <div id='ab_kpu'>
+            <p>KPU <br> DESIGN <br> ENGINEERING</p>
+        </div>
 
-        <div id='ab_small'></div>
-        <div id='ab_small2'></div>
+        <div id='ab_small'>
+            <p>Media <br> Design <br> Engineering</p>
+        </div>
+        <div id='ab_small2'>
+            <p>Industrail <br> Design <br> Engineering</p>
+        </div>
 
         <p id='ab_back'>KPU</p>
+        <p id='design_back'>DESIGN</p>
 
         <div class='ab_exp'>
             <p id='ab_name'>산학 융합으로 차별화된 실무 중심의 융합형 디자인공학부 실현</p>
@@ -50,10 +57,10 @@
         </div>
 
         <div class='ab_pur'>
-            <div id='ab_left'></div>
             <div>
                 <h2>교육 목적 및 목표</h2>
-                <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의  통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
+                <h3>디자인 씽킹과 HW/SW 개발 능력을 통해 기업을 혁신할 수 있는 인재양성</h3>
+                <p>디자인공학부는 사용자 중심 관점에서 IT 기술, 비즈니스, 문화, 산업과 같은 다학제적 교육과정을 통해 하드웨어와 소프트웨어의 표면 디자인에 머물지 않고 기획부터 내부설계까지 할 수 있는 융합적 디자이너를 양성하는 것을 목표로 합니다.</p>
             </div>
         </div>
 
@@ -75,48 +82,6 @@
 
 
 
-
-        <!-- <div class='main_img'>
-            <h1>KPU DESIGN ENGINNERING</h1>
-            <p>산학 융합으로 차별화된 실무 중심의 융합형 디자인공학부 실현</p>
-        </div>
-
-        <div class='main_text'>
-            <p>디자인기술이 창의적인 디자인 발상법과 공학적 마인드의 통합적 접근법을 추구하는 시대로 바뀜에 따라 단순히 심미적 역할에만 머물렀던 디자인 개념에서 확장하여 4차 산업혁명 기술 분야를 선도하고자 디자인학부가 디자인공학부로 변경되었습니다. 새로운 디자인공학부는 전공 분야 최고의 교수진과 산업체 수요 기반 실무형 교육과정을 통해 미래사회를 이끌어나갈 창의적 인재를 양성하는데 최선을 다하겠습니다.</p>
-        </div>
-
-
-
-        <h3>DETAILS</h3>
-        <div class='details'>
-            <div class='detail_li'>
-                <h4>교육 목적 및 목표</h4>
-            </div>
-            <div class='detail_li'>
-                <h4>연혁</h4>
-            </div>
-            <div class='detail_li'>
-                <h4>학과 현황</h4>
-            </div>
-            <div class='detail_li'>
-                <h4>전공능력</h4>
-            </div>
-            <div class='detail_li'>
-                <h4>특성화</h4>
-            </div>
-        </div>
-
-        <h3>PICTURES</h3>
-        <div class='pictures'>
-            <div id='pic'></div>
-            <div id='pic'></div>
-            <div id='pic'></div>
-            <div id='pic'></div>
-        </div>
-
-
-
-         -->
     </main>
 
     <footer id='ab_footer'>    </footer>
