--- a/students_2.html
+++ b/students_2.html
@@ -50,12 +50,16 @@
         </div>
 
         <div class='stu2_about'>
-            <div id='stu2_pro'>프로필 사진</div>
+            <div id='stu2_pro'></div>
+            <div id='stu2_pro'></div>
+            <div id='stu2_pro'></div>
+
             <div class='stu2_me'>
                 <h3>ABOUT ME</h3>
                 <div id='stu2_line'></div>
                 <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
             </div>
+            
         </div>
 
         <div class='what_i'>
@@ -63,20 +67,20 @@
             <div id='stu2_wline'></div>
             <ul>
                 <li>
-                    <div id='stu2_do'></div>
-                    <p>#Blender</p>
+                    <div class='stu2_do' id='do_1'></div>
+                    <p># Blender</p>
                 </li>
                 <li>
-                    <div id='stu2_do'></div>
-                    <p>#Blender</p>
+                    <div class='stu2_do' id='do_2'></div>
+                    <p># Photoshop</p>
                 </li>
                 <li>
-                    <div id='stu2_do'></div>
-                    <p>#Blender</p>
+                    <div class='stu2_do' id='do_3'></div>
+                    <p># Illustrator </p>
                 </li>
                 <li>
-                    <div id='stu2_do'></div>
-                    <p>#Blender</p>
+                    <div class='stu2_do' id='do_4'></div>
+                    <p># Premiere </p>
                 </li>
             </ul>
         </div>
