--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cca2516819.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>KPU DESIGN</title>
     <style>
         *{
@@ -978,14 +979,15 @@
         <h3>KPU DESIGN</h3>
     </footer>
     
-    <script> 
+    <!-- <script> 
     function fn_spread(id){ 
         var getID = document.getElementById(id); 
         getID.style.display=(getID.style.display=='block') ? 'none' : 'block'; 
         }
 
  
-    </script>
+    </script> -->
+    <script src='./script.js'></script>
 
 </body>
 </html>
