--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             height: 700px;
             text-align: center;
             margin-top: 166px;
-
+            z-index: 999;
             background-color: #3B72EE;
         }
 
@@ -979,14 +979,6 @@
         <h3>KPU DESIGN</h3>
     </footer>
     
-    <!-- <script> 
-    function fn_spread(id){ 
-        var getID = document.getElementById(id); 
-        getID.style.display=(getID.style.display=='block') ? 'none' : 'block'; 
-        }
-
- 
-    </script> -->
     <script src='./script.js'></script>
 
 </body>
