--- a/works.html
+++ b/works.html
@@ -43,9 +43,9 @@
             <input type='text' placeholder='이름 / #해쉬태그' id='stu_search' style='background:transparent; color:#fff;'>
             <i class="fas fa-search" id="stu_icon" style="cursor:pointer;"></i>
             <ul>
-                <li><a href='#'># UX/UI</a></li>
-                <li><a href='#'># App Design</a></li>
-                <li><a href='#'># Blender</a></li>
+                <li><a href='./tag.html'># UX/UI</a></li>
+                <li><a href='./tag.html'># App Design</a></li>
+                <li><a href='./tag.html'># Blender</a></li>
             </ul>
         </div>
 
