--- a/tag.html
+++ b/tag.html
@@ -10,7 +10,7 @@
 <body>
     <header class="nav-container">
         <nav class="navigation">
-            <a href="#"><h1>KPU DESIGN</h1></a>
+            <a href="./index.html"><h1>KPU DESIGN</h1></a>
             <ul>
                 <li><a href="./about.html">ABOUT</a></li>
                 <li><a href="./stundents.html">STUDENTS</a></li>
