--- a/works_2.html
+++ b/works_2.html
@@ -81,20 +81,20 @@
 
         <div class='detail_work'>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./stundents.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
                 </ul>
             </div>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./stundents.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
                 </ul></div>
             <div id= 'deta' >
-                <div id="stuImg" OnClick="location.href ='./stundents.html'" style="cursor:pointer;"></div>
+                <div id="stuImg" OnClick="location.href ='./students_2.html'" style="cursor:pointer;"></div>
                 <ul>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># Blender</li>
                     <li onclick = "location.href = './tag.html' " style="cursor:pointer;"># UX/UI</li>
