work_detail Update

--- a/works_2.html
+++ b/works_2.html
@@ -46,7 +46,7 @@
         <div id='work_img'></div>
 
         <div class='middle_work' id="middle-workGap">
-            <div id='mwImg'></div>
+            <div class='mwImg' id='mw1'></div>
             <div id='mwIntro'>
                 <p id='left'>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
             </div>
@@ -56,13 +56,13 @@
             <div id='mwIntro'>
                 <p id='right'>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
             </div>
-            <div id='mwImg'></div>
+            <div class='mwImg' id='mw2'></div>
         </div>
 
         <div class="newContent">
             <div class="newContentImg">
-                <div></div>
-                <div></div>
+                <div id='new1'></div>
+                <div id='new2'></div>
             </div>
             <p>the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox jumps over the lazy dog the quick brown fox </p>
         </div>
